[tool.poetry]
name = "ha-pvpc-custom"
version = "1.2.3"
description = "HomeAssistant custom integration for Spain electricity hourly pricing (PVPC)"
authors = ["Eugenio Panadero <eugenio.panadero@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/jamboles/ha-pvpc-custom-ajp"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
homeassistant = ">=2024.2.0"
aiopvpc = ">=4.3.1"

[tool.poetry.dev-dependencies]
pre-commit = ">=2.2.0"

[tool.isort]
profile = "black"
force_sort_within_sections = true
known_first_party = ["homeassistant"]
combine_as_imports = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
